--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 /* Styles by SG */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+body, html {
+    font-family: 'Poppins', sans-serif !important;
+}
 :root   {
     --white: #fff;
     --black: #000;
@@ -14,6 +18,7 @@
 }
 .badge {
     background-color: #707070 !important;
+    font-size: 16px;
 }
 .btn-danger {
     background: var(--darkPink) !important;
@@ -120,8 +125,8 @@ img{
 }
 .top-choices .card .product-details-list li{
     color: #575F72;
-    font-size: 16px;
-    margin-bottom: 12px;
+    font-size: 14px;
+    margin-bottom: 16px;
 }
 .top-choices .card .product-details-list li:before {
     content: '✓';
@@ -137,7 +142,7 @@ img{
     font-size: 15px;
 }
 .rating-pt {
-    font-size: 31px;
+    font-size: 36px;
     font-weight: bold;
     color: var(--black);
     padding-left: 7px;
@@ -152,7 +157,6 @@ img{
     font-size: 28px;
     font-weight: bold;
 }
-
 .icon-wrapper {
     background: #C6F6F7;
     border-radius: 20px;
