--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,41 @@
-/* Styles by SG */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* Styles by SG - Jsut for reference */
+@font-face {
+    font-family: PoppinsLight;
+    src: url(../fonts/Poppins-Light.ttf);
+}
+@font-face {
+    font-family: Poppins;
+    src: url(../fonts/Poppins-Regular.ttf);
+}
+@font-face {
+    font-family: PoppinsMedium;
+    src: url(../fonts/Poppins-Medium.ttf);
+}
+@font-face {
+    font-family: PoppinsBold;
+    src: url(../fonts/Poppins-Bold.ttf);
+}
+@font-face {
+    font-family: PoppinsSemiBold;
+    src: url(../fonts/Poppins-SemiBold.ttf);
+}
+@font-face {
+    font-family: PoppinsExtraBold;
+    src: url(../fonts/Poppins-ExtraBold.ttf);
+}
+/* Mont Font Family */
+@font-face {
+    font-family: MontBold;
+    src: url(../fonts/Mont-Bold.ttf);
+}
+@media (min-width: 1200px)
+{
+.container {
+    max-width: 1366px !important;
+}
+}
 body, html {
-    font-family: 'Poppins', sans-serif !important;
+    font-family: 'Poppins' !important;
 }
 .pr-2r {
     padding-right: 2rem!important;
@@ -36,10 +70,15 @@ body, html {
 }
 .nav-item .nav-link{
     padding: 0px !important;
+    font-family: 'PoppinsMedium';
 }
 .nav-item:hover .nav-link{
     color: #09BCBE !important;
     border-bottom: 1px solid #09BCBE;
+}
+.dropdown-item{
+    font-size: 14px !important;
+    font-family: 'Poppins';
 }
 .dropdown-item:hover{
     color: #09BCBE !important;
@@ -60,11 +99,12 @@ body, html {
 .home-title {
     color: #fff;
     font-size: 40px;
-    font-weight: bold;
+    font-family: 'PoppinsBold';
 }
 .home-subtitle {
     color: #fff;
     font-size: 20px;
+    font-family: 'PoppinsMedium';
 }
 .services-list {
     list-style-type: none;
@@ -81,8 +121,8 @@ body, html {
 }
 .service-title {
     font-size: 24px;
-    font-weight: 700;
     padding-left: 15px;
+    font-family: 'PoppinsSemiBold';
 }
 .rounded-25 {
     border-radius: 25px;
@@ -109,8 +149,18 @@ img{
 .fa-star {
     color: #F3B42C;
 }
+.rating-line {
+    font-family: 'PoppinsBold';
+    font-size: 13px;
+    color: #72798A;
+}
 .top-choices .card, .sidebar-right .card {
     box-shadow: 0px 7px 25px #C1DDEE;
+}
+.product-title {
+    font-family: 'PoppinsBold';
+    color: #09BCBE;
+    font-size: 28px;
 }
 .top-choices .card .product-details-list {
     list-style-type: none;
@@ -118,7 +168,7 @@ img{
 }
 .top-choices .card .product-details-list li{
     color: #575F72;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 16px;
 }
 .top-choices .card .product-details-list li:before {
@@ -128,7 +178,6 @@ img{
 }
 .product-pricing .top-choice-wrapper{
     font-size: 14px;
-    font-weight: bold;
     color: #000;
 }
 .rating-wrapper {
@@ -136,19 +185,18 @@ img{
 }
 .rating-pt {
     font-size: 36px;
-    font-weight: bold;
+    font-family: 'MontBold';
     color: #000;
     padding-left: 7px;
 }
 .product-count{
     color: #A5A5A5;
     font-size: 31px;
-    font-weight: bold;
+    font-family: 'PoppinsSemiBold';
 }
-.card-title {
-    color: #09BCBE;
-    font-size: 28px;
-    font-weight: bold;
+.sidebar-section-title {
+    font-family: 'PoppinsSemiBold';
+    font-size: 24px;
 }
 .icon-wrapper {
     background: #C6F6F7;
@@ -157,25 +205,26 @@ img{
     width: 52px;
     height: 52px;
 }
-.sidebar-list-title {
-    font-weight: 700;
+.sidebar-list-title, .editorial-name {
+    font-family: 'PoppinsMedium';
+    font-size: 16px;
 }
 .sidebar-list-desc {
     font-size: 14px;
 }
+.ana {
+    font-size: 20px;
+    font-family: 'PoppinsSemiBold';
+    text-transform: uppercase;
+    color: #09BCBE;
+}
 .editorial-name {
     color: #062B55;
-    font-size: 16px;
-    font-weight: 600;
-    text-transform: uppercase;
 }
 .lm-link {
     color: #09BCBE;
     font-size: 14px;
     border-bottom: 1px solid #09BCBE;  
-}
-.text-lightblue {
-    color: #09BCBE;
 }
 .f-14 {
     font-size: 14px !important;
@@ -196,6 +245,10 @@ img{
 }
 .footer-nav li a{
     color: #fff;
+    font-family: 'PoppinsLight';
+}
+.copyrights {
+    font-family: 'PoppinsLight';
 }
 .footer-nav li a:hover{
     color: #e4405f;
